fix: header links alignment

--- a/personal/src/App.css
+++ b/personal/src/App.css
@@ -185,6 +185,7 @@ nav > ul > li {
 .header__link {
 	display: flex;
 	gap: .3vw;
+	align-items: center;
 }
 
 .header__right {
